--- a/MVCiti24/appsettings.json
+++ b/MVCiti24/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ITI": "Data Source=.;Initial Catalog=MVC_ITIDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  }
 }
